test/visibility/rename/renameUsedMod/renameModRenameSymBadAccess.good
renameModRenameSymBadAccess.chpl:8: In function 'main':
renameModRenameSymBadAccess.chpl:9: error: 'x' undeclared (first use this function)
